--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-09-21">
+<meta name="dcterms.date" content="2025-12-31">
 
 <title>Be Less Wrong</title>
 <style>
@@ -118,9 +118,9 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
---cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
         }
       </style>
@@ -146,7 +146,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 21, 2025</p>
+      <p class="date">December 31, 2025</p>
     </div>
   </div>
   
@@ -165,17 +165,17 @@ window.Quarto = {
 <p>Across the globe, there are definite concrete <em>realities</em> of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-martinbaro" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-martinbaro">
 <div class="narrative">
 <p>We hope that our research will inform efforts to change these <em>realities</em>. However, we must be aware that our understanding of the world is at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of the social world, we can always better our understanding, and move toward being <em>less wrong</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-silverman" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-silverman">
 <div class="narrative">
 <p>As <span class="citation" data-cites="Silverman1998">Silverman (<a href="#ref-Silverman1998" role="doc-biblioref">1998</a>)</span> wrote:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-box" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box">
 <div class="narrative">
 <p>This reminds us of the famous saying by the statistician George Box about statistical models <span class="citation" data-cites="Hand2014">(<a href="#ref-Hand2014" role="doc-biblioref">Hand, 2014</a>)</span>:</p>
 </div>
@@ -190,12 +190,12 @@ window.Quarto = {
 <p>Let’s consider a simple visual model based upon some simulated data. Two key variables in this model are the <em>intervention</em> (a treatment or program that we hope does some good), and the <em>outcome</em> (an improved or beneficial mental health or psychological outcome).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0">
 <div class="narrative">
 <p>Here is a first model. What do these results say about the relationship of the <em>intervention</em> and the <em>outcome</em>?</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-notrecommended" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-notrecommended">
 <div class="narrative">
 <p>These simple straightforward results suggest that the <em>intervention</em> is associated with a worsening of the <em>outcome</em>.</p>
 </div>
@@ -205,7 +205,7 @@ window.Quarto = {
 <p>Let’s now consider a slightly more complex model. In addition to examining the <em>intervention</em> and the <em>outcome</em>, we account for the fact that individuals come from different <em>groups</em>. This could be any kind of group, e.g.&nbsp;a racial, ethnic, religious, cultural, or economic group.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0-group" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0-group">
 <div class="narrative">
 <p>Our conclusion seems to have flipped!</p>
 <section id="the-intervention-is-recommended" class="level2 boxgreen">
@@ -214,28 +214,28 @@ window.Quarto = {
 </section>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-Simpson" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-Simpson">
 <div class="narrative">
 <p>The fact that statistical results–and analogously visual results–can flip when more variables are accounted for is known as Simpson’s Paradox <span class="citation" data-cites="Simpson1951">(<a href="#ref-Simpson1951" role="doc-biblioref">Simpson, 1951</a>)</span>.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-multivariate" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-multivariate">
 <div class="narrative">
 <p>Adding more variables will not always <em>flip</em> our conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-variables" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-variables">
 <div class="narrative">
 <p>We need to include as many variables as we can in our visual and statistical models.</p>
 <p>Failure to include all of the relevant variables in our model–whether that model is visual or statistical–may lead to very wrong conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-thoughtexperiment" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-thoughtexperiment">
 <div class="narrative">
 <p>At first the scenario I’ve just presented seems almost like a trick, or a puzzle, designed to confound us, or to illustrate a convoluted statistical scenario. Yet, upon reflection, the scenario I’ve just presented is surprisingly plausible.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-belesswrong" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-belesswrong">
 <div class="narrative">
 <p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong. <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a><span class="math inline">\(^,\)</span> <a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a><span class="math inline">\(^,\)</span> <a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a></p>
 <p>What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a <em>little less wrong</em> in thinking about social problems.</p>
@@ -256,7 +256,7 @@ window.Quarto = {
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="plotly html-widget html-fill-item" id="htmlwidget-70a688681697cdb7b619" style="width:100%;height:288px;"></div>
-<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"bb25b451526":["function () ","plotlyVisDat"]},"cur_data":"bb25b451526","attrs":{"bb25b451526":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(211,211,211,1)","showcountries":true,"showocean":false,"oceancolor":"royalblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"a604d6afd27":["function () ","plotlyVisDat"]},"cur_data":"a604d6afd27","attrs":{"a604d6afd27":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(211,211,211,1)","showcountries":true,"showocean":false,"oceancolor":"royalblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries of the World
@@ -286,7 +286,13 @@ Figure&nbsp;1: Countries of the World
 <div>
 <p></p><figure class="figure"><p></p>
 <div>
-<pre class="mermaid mermaid-js">flowchart LR
+<pre class="mermaid mermaid-js">---
+config:
+  look: handDrawn
+  theme: neutral
+---
+
+flowchart LR
 
   classDef yellow fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
   
@@ -334,7 +340,13 @@ Figure&nbsp;2
 <div>
 <p></p><figure class="figure"><p></p>
 <div>
-<pre class="mermaid mermaid-js">flowchart LR
+<pre class="mermaid mermaid-js">---
+config:
+  look: handDrawn
+  theme: neutral
+---
+
+flowchart LR
 
   classDef yellow fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
   
@@ -464,8 +476,8 @@ Westreich, D., &amp; Greenland, S. (2013). The table 2 fallacy: Presenting and i
 <ol>
 <li id="fn1"><p>An analogous process can occur with <em>multilevel</em> data, in which there are often many groups, such as many schools, many neighborhoods, or many countries. Failure to account for the grouping of the data–in schools, neighborhoods or countries–can sometimes lead to dramatically incorrect results <span class="citation" data-cites="Gelman2007 Nieuwenhuis2015 DiezRoux2003">(<a href="#ref-DiezRoux2003" role="doc-biblioref">Diez Roux, 2003</a>; <a href="#ref-Gelman2007" role="doc-biblioref">Gelman et al., 2007</a>; <a href="#ref-Nieuwenhuis2015" role="doc-biblioref">Nieuwenhuis, 2015</a>)</span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>Since developing this tutorial, I’ve been reminded in some conversations about additional issues. For example, in this tutorial, I’m arguing for including as many control variables as possible. However, for some social issues, only <em>small samples</em> are available. Such small samples may be <em>statistically underpowered</em>, and may not have sufficient sample size to include many different control variables.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn3"><p>Additionally, since developing this tutorial, I’ve also been reminded that one must be <em>careful</em> and <em>thoughtful</em> about choosing <em>control variables</em>. As a simple example, consider a hypothetical situation in which <span class="math inline">\(x\)</span> is a cause of <span class="math inline">\(y\)</span>: <span class="math inline">\(x \rightarrow y\)</span>. If <span class="math inline">\(m\)</span> is a mediator of the relationship between <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span>, then including <span class="math inline">\(m\)</span> in one’s statistical model changes the meaning of the estimate of <span class="math inline">\(x\)</span>. <span class="math inline">\(\beta_x\)</span> is now an estimate of the <em>direct</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span>, accounting for the presence of <span class="math inline">\(m\)</span>. There may be an <em>indirect</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span> through <span class="math inline">\(m\)</span> (<span class="math inline">\(x \rightarrow m \rightarrow\)</span> y) that needs to be accounted for using special procedures <span class="citation" data-cites="Westreich2013">(CF <a href="#ref-Westreich2013" role="doc-biblioref">Westreich &amp; Greenland, 2013</a>)</span>. Including a control variable <span class="math inline">\(c\)</span> that is a function of both <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span> (<span class="math inline">\(x \rightarrow c \ \&amp; \ y \rightarrow\)</span> c) may introduce additional complications <span class="citation" data-cites="Elwert2014">(<a href="#ref-Elwert2014" role="doc-biblioref">Elwert &amp; Winship, 2014</a>)</span>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn4"><p>Further, one could argue, somewhat convincingly, that an RCT (<em>randomized controlled trial</em>) would solve the major issue inspiring this presentation. By <em>randomly</em> assigning study participants to a <em>treatment</em> and <em>control</em> group, we would avoid the possibility that our results could be <em>statistically confounded</em> by other factors, and thus avoid the possibility that our results would <em>flip</em> or <em>substantially change</em> as we add more variables to the model. First, it is important to remember that there are many social issues that <em>cannot be ethically studied</em> with random assignment. Second, what is not often enough acknowledged is that RCT’s are often based upon small <em>clinically available</em> or <em>conveniently available</em> samples that may not <em>generalize</em> well to other populations or people. Lastly, also not often enough acknowledged, is that the smaller samples often used in RCT’s are more likely to generate <em>false positives</em> than larger samples <span class="citation" data-cites="Button2013">(<a href="#ref-Button2013" role="doc-biblioref">Button et al., 2013</a>)</span>. Large observational studies with diverse populations–and models with many appropriate control variables–certainly have their role.<a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn3"><p>Additionally, since developing this tutorial, I’ve also been reminded that one must be <em>careful</em> and <em>thoughtful</em> about choosing <em>control variables</em>. As a simple example, consider a hypothetical situation in which <span class="math inline">\(x\)</span> is a cause of <span class="math inline">\(y\)</span>: <span class="math inline">\(x \rightarrow y\)</span>. If <span class="math inline">\(m\)</span> is a mediator of the relationship between <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span>, then including <span class="math inline">\(m\)</span> in one’s statistical model changes the meaning of the estimate of <span class="math inline">\(x\)</span>. <span class="math inline">\(\beta_x\)</span> is now an estimate of the <em>direct</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span>, accounting for the presence of <span class="math inline">\(m\)</span>. There may be an <em>indirect</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span> through <span class="math inline">\(m\)</span> (<span class="math inline">\(x \rightarrow m \rightarrow\)</span> y) that needs to be accounted for using special procedures <span class="citation" data-cites="Westreich2013">(CF <a href="#ref-Westreich2013" role="doc-biblioref">Westreich &amp; Greenland, 2013</a>)</span>. Including a variable <span class="math inline">\(c\)</span> that is a function of both <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span> (<span class="math inline">\(x \rightarrow c \ \&amp; \ y \rightarrow\)</span> c) (i.e.&nbsp;a <em>collider</em> variable) may introduce additional complications that may bias results <span class="citation" data-cites="Elwert2014">(<a href="#ref-Elwert2014" role="doc-biblioref">Elwert &amp; Winship, 2014</a>)</span>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn4"><p>One could argue, somewhat convincingly, that an RCT (<em>randomized controlled trial</em>) would solve the major issue inspiring this presentation. By <em>randomly</em> assigning study participants to a <em>treatment</em> and <em>control</em> group, we would avoid the possibility that our results could be <em>statistically confounded</em> by other factors, and thus avoid the possibility that our results would <em>flip</em> or <em>substantially change</em> as we add more variables to the model. First, it is important to remember that there are many social issues that <em>cannot be ethically studied</em> with random assignment. Second, what is not often enough acknowledged is that RCT’s are often based upon small <em>clinically available</em> or <em>conveniently available</em> samples that may not <em>generalize</em> well to other populations or people. Lastly, also not often enough acknowledged, is that the smaller samples often used in RCT’s are more likely to generate <em>false positives</em> than larger samples <span class="citation" data-cites="Button2013">(<a href="#ref-Button2013" role="doc-biblioref">Button et al., 2013</a>)</span>. Large observational studies with diverse populations–and models with many appropriate control variables–certainly have their role.<a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
 <!-- /main column -->
